--- a/i18n/zh-CN.json
+++ b/i18n/zh-CN.json
@@ -579,19 +579,19 @@
     {
       "data": {
         "stringId": 504,
-        "text": "\u60a8\u5c06\u4f7f\u7528 GORILLA-OKT LP \u4ee3\u5e01\u6765\u652f\u4ed8\u65b0\u4ee3\u5e01\u7684\u8d39\u7528\uff0c\u8fd9\u610f\u5473\u7740\u60a8\u9700\u8981\u5728\u6d41\u52a8\u6027\u8d44\u91d1\u6c60\u4e2d\u8d28\u62bc\u7b49\u91cf\u7684 GORILLA \u548c OKT \u624d\u80fd\u53c2\u4e0e\u3002"
+        "text": "\u60a8\u5c06\u4f7f\u7528 GORILLA-AVAX LP \u4ee3\u5e01\u6765\u652f\u4ed8\u65b0\u4ee3\u5e01\u7684\u8d39\u7528\uff0c\u8fd9\u610f\u5473\u7740\u60a8\u9700\u8981\u5728\u6d41\u52a8\u6027\u8d44\u91d1\u6c60\u4e2d\u8d28\u62bc\u7b49\u91cf\u7684 GORILLA \u548c AVAX \u624d\u80fd\u53c2\u4e0e\u3002"
       }
     },
     {
       "data": {
         "stringId": 506,
-        "text": "\u83b7\u53d6 GORILLA-OKT LP >"
+        "text": "\u83b7\u53d6 GORILLA-AVAX LP >"
       }
     },
     {
       "data": {
         "stringId": 508,
-        "text": "\u6b64\u9879\u76ee\u83b7\u5f97\u4e86 OKT\uff0cGORILLA Finance \u4f1a\u711a\u6bc1 GORILLA\u3002"
+        "text": "\u6b64\u9879\u76ee\u83b7\u5f97\u4e86 AVAX\uff0cGORILLA Finance \u4f1a\u711a\u6bc1 GORILLA\u3002"
       }
     },
     {
@@ -609,7 +609,7 @@
     {
       "data": {
         "stringId": 514,
-        "text": "\u901a\u8fc7 Binance Smart Chain \u4e0a\u6700\u5e38\u7528\u7684 AMM \u9879\u76ee\u548c\u6d41\u52a8\u6027\u4f9b\u5e94\u5546 Gorilla Finance \u53d1\u8d77\u60a8\u7684\u9879\u76ee\uff0c\u5c06\u60a8\u7684\u4ee3\u5e01\u76f4\u63a5\u5f15\u5165 OKT \u4e0a\u6700\u6d3b\u8dc3\u4e14\u5feb\u901f\u53d1\u5c55\u7684\u793e\u533a\u3002"
+        "text": "\u901a\u8fc7 Binance Smart Chain \u4e0a\u6700\u5e38\u7528\u7684 AMM \u9879\u76ee\u548c\u6d41\u52a8\u6027\u4f9b\u5e94\u5546 Gorilla Finance \u53d1\u8d77\u60a8\u7684\u9879\u76ee\uff0c\u5c06\u60a8\u7684\u4ee3\u5e01\u76f4\u63a5\u5f15\u5165 AVAX \u4e0a\u6700\u6d3b\u8dc3\u4e14\u5feb\u901f\u53d1\u5c55\u7684\u793e\u533a\u3002"
       }
     },
     {
@@ -771,7 +771,7 @@
     {
       "data": {
         "stringId": 578,
-        "text": "OKT第3大DEFI网站"
+        "text": "AVAX第3大DEFI网站"
       }
     },
     {
@@ -825,13 +825,13 @@
     {
       "data": {
         "stringId": 596,
-        "text": "\u8d2d\u4e70 GORILLA \u548c OKT \u4ee3\u5e01"
+        "text": "\u8d2d\u4e70 GORILLA \u548c AVAX \u4ee3\u5e01"
       }
     },
     {
       "data": {
         "stringId": 598,
-        "text": "\u901a\u8fc7\u6dfb\u52a0 GORILLA \u548c OKT \u6d41\u52a8\u6027\u83b7\u53d6 GORILLA-OKT LP \u4ee3\u5e01"
+        "text": "\u901a\u8fc7\u6dfb\u52a0 GORILLA \u548c AVAX \u6d41\u52a8\u6027\u83b7\u53d6 GORILLA-AVAX LP \u4ee3\u5e01"
       }
     },
     {
