--- a/i18n/en.json
+++ b/i18n/en.json
@@ -213,7 +213,7 @@
     {
       "data": {
         "stringId": 356,
-        "text": "View on Oklink"
+        "text": "View on Avax Explorer"
       }
     },
     {
@@ -645,25 +645,25 @@
     {
       "data": {
         "stringId": 534,
-        "text": "GORILLA Stats - TBA"
+        "text": "GORILLA Stats"
       }
     },
     {
       "data": {
         "stringId": 536,
-        "text": "Total Minted - TBA"
+        "text": "Total Minted"
       }
     },
     {
       "data": {
         "stringId": 538,
-        "text": "Total Burned - TBA"
+        "text": "Total Burned"
       }
     },
     {
       "data": {
         "stringId": 540,
-        "text": "New GORILLA\/block - TBA"
+        "text": "New GORILLA\/block"
       }
     },
     {
@@ -1221,7 +1221,7 @@
     {
       "data": {
         "stringId": 10002,
-        "text": "Stake tokens to earn EGG"
+        "text": "Stake tokens to earn GORILLA"
       }
     },
     {
@@ -1233,13 +1233,13 @@
     {
       "data": {
         "stringId": 10004,
-        "text": "Circulating Supply - TBA"
+        "text": "Circulating Supply"
       }
     },
     {
       "data": {
         "stringId": 10005,
-        "text": "Market Cap - TBA"
+        "text": "Market Cap"
       }
     }
   ],
